bed69d28-4d85-53a5-88ec-8677514cfbbf

--- a/ansible/common_tasks/git_add_commit_additional.yml
+++ b/ansible/common_tasks/git_add_commit_additional.yml
@@ -4,7 +4,7 @@
       chdir: "{{ ansible_env.PWD }}/../.."
 
   - name: "git commit -m {{ current_time_uuid }}"
-    shell: "git commit -m \"first commit\""
+    shell: "git commit -m \"{{ current_time_uuid }}\""
     args:
       chdir: "{{ ansible_env.PWD }}/../.."
 
