--- a/ansible/commands/regenerate_site.yml
+++ b/ansible/commands/regenerate_site.yml
@@ -1,6 +1,8 @@
 ---
 - name: Generate HTML file
   hosts: localhost
+  vars_files:
+    - ../vault/page_variables.yml
   tasks:
     - name: Create HTML file
       copy:
@@ -8,10 +10,10 @@
           <!DOCTYPE html>
           <html>
           <head>
-            <title>My HTML file</title>
+            <title>{{ html_page_title }}</title>
           </head>
           <body>
-            <h1>Hello, World!</h1>
+            <h1>{{ body_page_title }}</h1>
           </body>
           </html>
         dest: ../../index.html
