--- a/ansible/variables/site.yml
+++ b/ansible/variables/site.yml
@@ -20,7 +20,7 @@ navigate_row: "Site Navigation Row"
 footer: "Copyright © 2023"
 info:
   -
-    markup: "Here's a sample info!"
+    markup: "Craig Moore is <a href=\"https://www.linkedin.com/in/craigalexandermoore/\">currently available to hire</a> for Drupal and Typescript contract work."
 success:
   -
     markup: "Here's a sample success!"
