--- a/ansible/variables/pages/index.yml
+++ b/ansible/variables/pages/index.yml
@@ -7,7 +7,7 @@ index:
           url: index.html
           link: Home
       title: "Hello World"
-      header: "This is a sample page while building out this static Ansible sitebuilder project."
+      header: "This is a sample page while building out this Ansible-based static sitebuilder project."
       header_image:
         src: "./images/shoseki.png"
         alt: "Background header for Shoseki, a fractal that was pushed through Googles' Deep Dream"
