df8acef3-a22c-5ea6-b174-783c32f4894e

--- a/ansible/variables/pages/banter.yml
+++ b/ansible/variables/pages/banter.yml
@@ -6,7 +6,8 @@ banter:
         -
           url: index.html
           link: Home
-        - url: banter.html
+        -
+          url: banter.html
           link: Banter
       title: "Banter"
       header: "This page is about Banter, the social VR app from SideQuest!"
