--- a/ansible/variables/pages/banter.yml
+++ b/ansible/variables/pages/banter.yml
@@ -49,6 +49,9 @@ banter:
               Cinema2D <a href="banter://cinema2d.glitch.me">space</a>
             </li>
             <li>
+              Empty scene <a href="banter://emptyscene.glitch.me">space</a>
+            </li>
+            <li>
               Shoseki Streaming [Currently not working due to limitations with Banter] <a href="banter://cinema2dparameterised.glitch.me/?livestream-type=twitch&livestream-key=shoseki">space</a>
             </li>
             <li>
