--- a/ansible/common_tasks/generate_menu_links.yml
+++ b/ansible/common_tasks/generate_menu_links.yml
@@ -6,10 +6,7 @@
   set_fact:
     new_menu_link: "<a href=\"{{ page.url }}\">{{ page.content.title }}</a>"
 
-# - set_fact:
-#     "{{ page_dict.key }}" : "{{ new_menu_link }}"
-
 - name: Combine new link into page_menu_links variable
   set_fact:
     page_menu_links:
-      "{{ page_menu_links | default({}) | combine({\"{{ page_dict.key }}\" : \"{{ new_menu_link }}\"}) }}"
+      "{{ page_menu_links | default({}) | combine({ page_dict.key : new_menu_link }) }}"
